[gd_scene load_steps=3 format=3 uid="uid://cblhdfkn0pjt"]

[ext_resource type="Script" path="res://scenes/menu/MenuPausa.gd" id="1_erk7l"]
[ext_resource type="Texture2D" uid="uid://jjjqchoi4yjv" path="res://assets/menu/Gray.png" id="2_oqef3"]

[node name="MenuPausa" type="Node"]
script = ExtResource("1_erk7l")

[node name="Backend" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oqef3")
stretch_mode = 1

[node name="Pausado" type="Label" parent="Backend"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.5
offset_top = -153.5
offset_right = 246.5
offset_bottom = -50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "Jogo Pausado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Backend"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -25.0
offset_right = 165.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continuar" type="Button" parent="Backend/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Sair")
focus_neighbor_bottom = NodePath("../Audio")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_colors/font_focus_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_colors/font_hover_pressed_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_font_sizes/font_size = 45
text = "Continuar"

[node name="Audio" type="Button" parent="Backend/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Continuar")
focus_neighbor_bottom = NodePath("../Sair")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_colors/font_focus_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_colors/font_hover_pressed_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_font_sizes/font_size = 45
text = "√Åudio"

[node name="Sair" type="Button" parent="Backend/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Audio")
focus_neighbor_bottom = NodePath("../Continuar")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_colors/font_focus_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_colors/font_hover_pressed_color = Color(0.784314, 0.745098, 0.176471, 1)
theme_override_font_sizes/font_size = 45
text = "Sair"

[node name="AudioSettings" type="Popup" parent="."]

[connection signal="focus_entered" from="Backend/VBoxContainer/Continuar" to="." method="_on_continuar_focus_entered"]
[connection signal="focus_exited" from="Backend/VBoxContainer/Continuar" to="." method="_on_continuar_focus_exited"]
[connection signal="mouse_entered" from="Backend/VBoxContainer/Continuar" to="." method="_on_continuar_mouse_entered"]
[connection signal="pressed" from="Backend/VBoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="focus_entered" from="Backend/VBoxContainer/Audio" to="." method="_on_audio_focus_entered"]
[connection signal="focus_exited" from="Backend/VBoxContainer/Audio" to="." method="_on_audio_focus_exited"]
[connection signal="mouse_entered" from="Backend/VBoxContainer/Audio" to="." method="_on_audio_mouse_entered"]
[connection signal="pressed" from="Backend/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="focus_entered" from="Backend/VBoxContainer/Sair" to="." method="_on_sair_focus_entered"]
[connection signal="focus_exited" from="Backend/VBoxContainer/Sair" to="." method="_on_sair_focus_exited"]
[connection signal="mouse_entered" from="Backend/VBoxContainer/Sair" to="." method="_on_sair_mouse_entered"]
[connection signal="pressed" from="Backend/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
